--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,31 +1,29 @@
 {
-  "name": "prompt-battle",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon -r esm server.js",
-    "start": "node -r esm server.js"
-  },
-  "author": "Sahil Suman",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.2.0",
-    "body-parser": "^1.20.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "esm": "^3.2.25",
-    "express": "^4.18.2",
-    "firebase": "^9.14.0",
-    "image-data-uri": "^2.0.1",
-    "image-to-base64": "^2.2.0",
-    "joi": "^17.7.0",
-    "morgan": "^1.10.0",
-    "morgan-body": "^2.6.8",
-    "openai": "^3.1.0",
-    "socket.io": "^4.5.4"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+	"name": "Prompt-Battle",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"start": "node app.js",
+		"dev": "nodemon app.js"
+	},
+	"keywords": [],
+	"author": "Ashutosh Singh",
+	"license": "ISC",
+	"dependencies": {
+		"bcrypt": "^5.1.0",
+		"body-parser": "^1.20.2",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"helmet": "^7.0.0",
+		"jsonwebtoken": "^9.0.1",
+		"mongoose": "^7.3.3",
+		"morgan": "^1.10.0",
+		"openai": "^3.3.0"
+	},
+	"devDependencies": {
+		"nodemon": "^3.0.1"
+	}
 }
